# NotPesto-rust

./: .env.example  Cargo.toml
migrations/: 20230227174328_initial-migration.sql  20230227175040_initial-tables.sql
src/: main.rs
src/commands/: mod.rs  number_input.rs
