[package]
name = "lottery-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11", default-features = false, features= ["builder", "cache", "client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.23"
tracing-subscriber = "0.3.16"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "offline", "postgres"] }
